<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.buseni</groupId>
	<artifactId>ubukwebwiza</artifactId>
	<version>1.0.2-SNAPSHOT</version>
	<packaging>war</packaging>

	<properties>
		<!-- Triée dans l'ordre alphabétique, merci de respecter -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<assertj.version>1.6.1</assertj.version>
		<commons-beanutils.version>1.9.1</commons-beanutils.version>
		<spring-framework.version>4.1.6.RELEASE</spring-framework.version>
		<spring-security-web.version>4.0.1.RELEASE</spring-security-web.version>
		<hibernate.version>4.3.10.Final</hibernate.version>
		<joda-time.version>2.4</joda-time.version>

		<hsqldb.version>2.2.8</hsqldb.version>
		<querydsl.version>3.5.1</querydsl.version>
		<!-- Plugins -->
		<maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
		<maven-tomcat-plugin.version>2.2</maven-tomcat-plugin.version>

	</properties>

	<scm>

		<connection>scm:git:git@github.com:fhabumugisha/ubukwebwiza.git</connection>

		<developerConnection>scm:git:git@github.com:fhabumugisha/ubukwebwiza.git</developerConnection>

		<url>git@github.com:fhabumugisha/ubukwebwiza.git</url>

		<tag>ubukwebwiza-1.0.0</tag>

	</scm>

	    <distributionManagement>
        <repository>
            <id>nexus</id>
            <url>http://ubnexus.jelastic.lunacloud.com/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>nexus</id>
            <url>http://ubnexus.jelastic.lunacloud.com/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
	<developers>

		<developer>

			<id>fhabumugisha</id>

			<name>Fabrice Habumugisha</name>

			<email>fabriceboris@gmail.com</email>

		</developer>

	</developers>



	<dependencies>
		<dependency>
			<groupId>net.coobird</groupId>
			<artifactId>thumbnailator</artifactId>
			<version>0.4.8</version>
		</dependency>
		<dependency>
			<groupId>org.imgscalr</groupId>
			<artifactId>imgscalr-lib</artifactId>
			<version>4.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>

			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>${hsqldb.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.33</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>4.0.2.GA</version>
		</dependency>

		<!-- Spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-jpa</artifactId>
			<version>1.8.0.RELEASE</version>

		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring-security-web.version}</version>

		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring-security-web.version}</version>
		</dependency>

		<!-- Spring caching framework inside this -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>

		<!-- Support for Ehcache and others -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>

		<!-- Thymeleaf -->
		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf</artifactId>
			<version>2.1.4.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf</groupId>
			<artifactId>thymeleaf-spring4</artifactId>
			<version>2.1.4.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>nz.net.ultraq.thymeleaf</groupId>
			<artifactId>thymeleaf-layout-dialect</artifactId>
			<version>1.2.7</version>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
			<version>2.1.2.RELEASE</version>
		</dependency>

		<!-- Servlet -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.4.180</version>
		</dependency>
		<!-- Junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<!-- Query dsl -->

		<!-- <dependency> -->
		<!-- <groupId>com.mysema.querydsl</groupId> -->
		<!-- <artifactId>querydsl-core</artifactId> -->
		<!-- <version>${querydsl.version}</version> -->
		<!-- </dependency> -->

		<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-apt</artifactId>
			<version>${querydsl.version}</version>
		</dependency>

		<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-jpa</artifactId>
			<version>${querydsl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.3.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.5.1</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-core-asl</artifactId>
			<version>1.9.13</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>

		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>2.9.0</version>
		</dependency>

		<!-- Amazon S3 sdk -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
			<version>1.9.37</version>
		</dependency>

		<!-- Dandelion datatables -->
		<dependency>
			<groupId>com.github.dandelion</groupId>
			<artifactId>datatables-thymeleaf</artifactId>
			<version>0.10.1</version>
		</dependency>
		<!-- javaMail -->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
		</dependency>
		<!-- Password validator -->
		<dependency>
			<groupId>org.passay</groupId>
			<artifactId>passay</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.8.5</version>
		</dependency>
		<!-- Utils -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.0</version>
		</dependency>
		<!-- <dependency> -->
		<!-- <groupId>com.fasterxml.jackson.core</groupId> -->
		<!-- <artifactId>jackson-annotations</artifactId> -->
		<!-- <version>2.6.0-rc3</version> -->
		<!-- </dependency> -->
		<dependency>
	<groupId>org.quartz-scheduler</groupId>
	<artifactId>quartz</artifactId>
	<version>2.2.1</version>
</dependency>
		

	</dependencies>

	<!-- Build -->
	<build>
		<filters>
			<!-- Ensures that the config.properties file is always loaded from the 
				configuration directory of the active Maven profile. -->
			<filter>src/main/filters/${build.profile.id}.properties</filter>
		</filters>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<warName>ubukwebwiza</warName>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>${maven-tomcat-plugin.version}</version>
				<configuration>
					<server>tomcat-development-server</server>
					<port>9966</port>
					<path>/ubukwebwiza</path>
					<protocol>org.apache.coyote.http11.Http11NioProtocol</protocol>
					<tomcatWebXml />
					<contextFile>${basedir}/src/main/webapp/META-INF/context.xml</contextFile>
					<useTestClasspath>false</useTestClasspath>
					<!-- <systemProperties> <MAVEN_OPTS>-Xmx1024m -Xms512m -XX:MaxPermSize=512m 
						-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</MAVEN_OPTS> 
						</systemProperties> -->
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-clean-plugin</artifactId> 
				<version>2.6.1</version> <configuration> <filesets> <fileset> <directory>${basedir}/src/main/webapp/WEB-INF/classes</directory> 
				<directory>${basedir}/src/main/webapp/WEB-INF/lib</directory> <followSymlinks>false</followSymlinks> 
				</fileset> </filesets> </configuration> </plugin> -->



			<plugin>
				<groupId>com.mysema.maven</groupId>
				<artifactId>maven-apt-plugin</artifactId>
				<version>1.0.4</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>process</goal>
						</goals>
						<configuration>
							<outputDirectory>target/generated-sources/java</outputDirectory>
							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
							<options>
								<querydsl.entityAccessors>true</querydsl.entityAccessors>
							</options>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>

				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<executions>
					<execution>
						<id>default-deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
				<version>2.6</version> <configuration> <formats> <format>html</format> <format>xml</format> 
				</formats> </configuration> <executions> <execution> <phase>package</phase> 
				<goals> <goal>cobertura</goal> </goals> </execution> </executions> </plugin> -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.jelastic</groupId>
				<artifactId>jelastic-maven-plugin</artifactId>
				<version>1.7</version>
				<configuration>
					<email>ubukwebwiza@gmail.com</email>
					<password>UbukweBwiza123&amp;</password>
					<context>ROOT</context>
					<environment>ubukwebwiza</environment>
					<comment>Deploy to jelastic ubukwebwiza-1.0.1</comment>

					<api_hoster>app.jelastic.lunacloud.com</api_hoster>
				</configuration>
			</plugin>
			
			 <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.4.2</version>
            </plugin>
		</plugins>
		
	</build>
	<pluginRepositories>
	
	
	<pluginRepository>
     <id>nexus</id>
     <url>http://ubnexus.jelastic.lunacloud.com/content/groups/public/</url>
     <releases>
         <enabled>true</enabled>
     </releases>
     <snapshots>
         <enabled>true</enabled>
     </snapshots>
 </pluginRepository>
 </pluginRepositories>
	<profiles>
		<profile>
			<id>dev</id>
			<!-- The development profile is active by default -->
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>				
				<build.profile.id>dev</build.profile.id>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<properties>				
				<build.profile.id>prod</build.profile.id>
			</properties>
		</profile>
	</profiles>
</project>
